feat(boats-pages): UC2-UC4-Added paginated boats page and detail view
Backend (endpoint + tests + query + dataset)
frontend page with reusable components and pluged with backend api